changed href of source in footer

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
     </div>
     <div class="footer">
         <span class="credits">
-            Brought to you by : <a href="https://github.com/rvarad" target="_blank">rvarad</a> | <a
-                href="https://github.com/rvarad/" target="_blank">Source</a>
+            Brought to you by : <a href="https://github.com/rvarad" target="_blank">rvarad</a> | <a href="https://github.com/rvarad/tic-tac-toe-top" target="_blank">Source</a>
         </span>
     </div>
 </body>
